--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/attr/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/attr/add.html
@@ -1,54 +1,75 @@
-<form th:action="@{/admin/m/base/attr/add.gsp}" id="addForm" role="form" class="form-horizontal" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">新增文章属性</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="form-group">
-					<label class="col-md-3 control-label">属性名称<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input name="attName" placeholder="请输入属性名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=attr)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a th:href="@{/admin/m/base/attr/list.gsp}">文章属性</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">属性代码<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input name="codeNum" placeholder="请输入属性代码" type="text" class="form-control" />
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 文章属性
+				</blockquote>
+				<form th:action="@{/admin/m/base/attr/add.gsp}" id="addForm" role="form" class="layui-form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>新增文章属性</legend>
+					</fieldset>
+					<div class="layui-form-item">
+						<label class="layui-form-label">属性名称：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="attName" placeholder="请输入属性名称" lay-verify="attName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">属性代码：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="codeNum" placeholder="请输入属性代码" lay-verify="codeNum" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            attName : {
-                required : true,
-                maxlength : 20
-            },
-            codeNum : {
-                required : true,
-                maxlength : 20
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        attName : function(value) {
+            if (value.length < 2) {
+                return '属性名称至少得2个字哦！';
+            } else if (value.length > 20) {
+                return '属性名称不能太长哦，最长20个字！';
+            }
+        },
+        codeNum : function(value) {
+            if (value.length < 2) {
+                return '属性代码至少得2个字哦！';
+            } else if (value.length > 20) {
+                return '属性代码不能太长哦，最长20个字！';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'addForm', rules, messages);
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
