常规维护，请暂时不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/edit.html
@@ -1,96 +1,99 @@
-<form th:action="@{/admin/m/ext/guestbook/edit.gsp}" th:object="${result}" id="editForm" class="form-horizontal" role="form" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">回复留言</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<input th:field="*{id}" type="text" hidden="true" />
-				<div class="form-group">
-					<label class="col-md-3 control-label">状　　态<label class="text-danger">*</label>：</label>
-					<div class="col-md-7">
-						<select class="form-control" th:field="*{state}">
-                             <option value="1">审核通过</option>
-                             <option value="2">屏蔽</option>
-                             <option value="10">待审核</option>
-                        </select>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-内容管理-专题管理|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+<!--/***** 当前页css  start *****/-->
+<!--/***** 当前页css  end *****/-->
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=guestbook)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/base/special/list.gsp}">留言管理</a><a><cite>回复留言</cite></a>
+					</span>
+				</div>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/ext/guestbook/edit.gsp}" th:object="${result}" id="editForm" role="form" method="post" class="layui-form">
+					<input th:field="*{id}" type="text" hidden="true" />
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>留言管理-回复</legend>
+					</fieldset>
+					<div class="layui-form-item">
+						<label class="layui-form-label">专题类别：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select th:field="*{state}" lay-verify="required">
+								<option value="1">审核通过</option>
+								<option value="2">屏蔽</option>
+								<option value="10">待审核</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">是否推荐<label class="text-danger">*</label>：</label>
-					<div class="col-md-7">
-						<select class="form-control" th:field="*{recommend}" name="recommend">
-                             <option value="1"> 是</option>
-                             <option value="2"> 否</option>
-                        </select>
+					<div class="layui-form-item">
+						<label class="layui-form-label">是否推荐：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select th:field="*{recommend}" lay-verify="required">
+								<option value="1">是</option>
+								<option value="2">否</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">回复IP<label class="text-danger">*</label>：</label>
-					<div class="col-md-7">
-                        <input th:field="*{replyIp}" placeholder="请输入回复IP" type="text" class="form-control" />
-                    </div>
-				</div>
-				<div class="form-group">
-                    <label class="col-md-3 control-label">回复时间<label class="text-danger">*</label>：</label>
-                    <div class="col-md-7">
-                        <div class="input-group date">
-                            <input th:field="*{replyTime}" id="replyTime" readOnly="true" type="text" class="form-control"/>
-                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-					<label class="col-md-3 control-label">回复内容<label class="text-danger">*</label>：</label>
-					<div class="col-md-7">
-						<textarea  class="form-control"  th:field="*{replyContent}"></textarea>
+					<div class="layui-form-item">
+						<label class="layui-form-label">回复IP：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" th:field="*{replyIp}" lay-verify="replyIp" placeholder="请输入回复IP" autocomplete="off" class="layui-input">
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">回复时间：<span style="color: red">*</span></label>
+						<div class="layui-input-inline">
+							<input type="text" lay-verify="replyTime" placeholder="yyyy-mm-dd" autocomplete="off" th:field="*{replyTime}" class="layui-input" onclick="layui.laydate({elem: this})">
+						</div>
+					</div>
+					<div class="layui-form-item layui-form-text">
+						<label class="layui-form-label">回复内容：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<textarea th:field="*{replyContent}" placeholder="最多输入140字" lay-verify="replyContent" rows="3" class="layui-textarea"></textarea>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+<!--/***** 当前页js start *****/-->
 <script th:inline="javascript">
-	$('.date').datepicker({
-	    todayBtn: "linked",
-	    keyboardNavigation: false,
-	    forceParse: false,
-	    initialDate : new Date(),
-	    altField: '#actualDate',
-	    calendarWeeks: true,
-	    autoclose: true
-	});
     /*<![CDATA[*/
-    $(function() {
-    	//$("#replyTime").val(new Date().toLocaleString().substring(0,10));
-        var rules = {
-            replyIp : {
-                required : true,
-                maxlength : 20,
-                minlength : 9
-            },
-            replyTime : {
-            	required : true
-            },
-            replyContent : {
-                required : true,
-                maxlength : 140,
-                minlength : 5
+    var form = layui.form();
+    var $ = layui.jquery;
+  //自定义验证规则
+    var rules = {
+        replyIp : function(value) {
+            if (value.length < 9 || value.length > 20) {
+                return '回复IP在9~20个字符之间';
+            }
+        },
+        replyContent : function(value) {
+            if (value.length < 5 || value.length > 140) {
+                return '描述在5~140个字符之间';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'editForm', rules, messages);
-    });
+    };
+    form.verify(rules);
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
+</html>
