--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/guestbook/list.html
@@ -4,166 +4,106 @@
 <title th:text="|#{customer.systemTitle}-图灵谷-内容管理-留言管理|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/tgCube/css/libs/datepicker.css}" rel="stylesheet" />
 <!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=content,current=guestbook)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=内容管理,current=留言管理)">面包屑栏</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="main-box">
-							<header class="main-box-header">
-								<div class="row m-b-sm m-t-sm">
-									<form th:action="@{/admin/m/ext/guestbook/list.gsp}" id="dataTableFilterForm" class="form-horizontal" role="form" action="#" method="post">
-										<div class="col-md-8"></div>
-										<div class="col-md-4">
-											<div class="form-group">
-												<label class="col-md-4 control-label">留言类型：</label>
-												<div class="col-md-8 ">
-													<select id="typeId" name="typeId" class="form-control">
-														<option th:each="guestbookType : ${guestbookType}" th:value="${guestbookType.id}" th:text="${guestbookType.typeName}"></option>
-													</select>
-												</div>
-											</div>
-										</div>
-									</form>
-								</div>
-							</header>
-							<div class="main-box-body clearfix">
-								<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-									<thead>
-										<tr>
-											<th>#</th>
-											<th>状态</th>
-											<th>所属类型</th>
-											<th>留言标题</th>
-											<th>留言内容</th>
-											<th>留言日期</th>
-											<th>是否回复</th>
-											<th>是否推荐</th>
-											<th width="120">操作</th>
-										</tr>
-									</thead>
-								</table>
-							</div>
-						</div>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=guestbook)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/guestbook/list.gsp}">留言管理</a><a><cite>列表</cite></a>
+					</span>
 				</div>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/ext/guestbook/list.gsp}" id="typeForm" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline" style="width: 200px;">
+									<select id="typeId" name="typeId">
+										<option value="">留言类型</option>
+										<option th:each="guestbookType : ${guestbookType}" th:value="${guestbookType.id}" th:text="${guestbookType.typeName}"></option>
+									</select>
+								</div>
+							</div>
+						</blockquote>
+					</div>
+				</form>
+				<!--/***** 列表 *****/-->
+				<table class="layui-table" lay-even="" lay-skin="row">
+					<thead id="dataTable">
+						<tr>
+							<th style="width: 40px">#</th>
+							<th>状态</th>
+							<th>所属类型</th>
+							<th>留言标题</th>
+							<th>留言内容</th>
+							<th>留言日期</th>
+							<th>是否回复</th>
+							<th>是否推荐</th>
+							<th style="width: 140px">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${guestbookList.records == null or guestbookList.records.size() == 0}">
+							<td colspan="9" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,items:${guestbookList.records}">
+							<td th:text="${guestbookList.pageSize*(guestbookList.page-1)+items.index+1}" style="text-align: center;">序号</td>
+							<td th:text="${item.state==1?'已审核':(item.state==2?'屏蔽':(item.state==10?'待审核':''))}">状态</td>
+							<td th:text="${item.typeName}">所属类型</td>
+							<td th:text="${item.title}">留言标题</td>
+							<td th:text="${item.gbContent}">留言内容</td>
+							<td th:text="${item.gbDate}">留言日期</td>
+							<td th:text="${item.replyed==1?'是':'否'}">是否回复</td>
+							<td th:text="${item.recommend==1?'是':'否'}">是否推荐</td>
+							<td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/ext/guestbook/edit_{id}.gsp(id=${item.id})}"><i class="layui-icon">&#xe642;</i></a>
+								<button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+									<i class="layui-icon">&#xe640;</i>
+								</button></td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="pageDiv"></div>
 			</div>
-			<div th:replace="fragments/footer_admin">底部</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/bootstrap-datepicker.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* 模板引擎生成数据 */-->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null
-    }, {
-        "data" : "state",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '已审核';
-            } else if (data === 2) {
-                return '<span class="text-success">屏蔽</span>';
-            } else if (data === 10) {
-                return '<span class="text-danger">待审核</span>';
+    var $ = layui.jquery;
+    var result = /*[[${guestbookList}]]*/;
+    $(function(){
+        $("#typeId").val(GetQueryString("typeId"));
+        var option = {
+            listUrl : /*[[@{/admin/m/ext/guestbook/list.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+                typeId
             }
-        }
-    }, {
-        "data" : "typeName",
-    }, {
-        "data" : "title"
-    }, {
-        "data" : "gbContent"
-    }, {
-        "data" : "gbDate"
-    }, {
-        "data" : "replyed",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">是</span>';
-            } else {
-                return '<span class="text-danger">否</span>';
-            }
-        }
-    }, {
-        "data" : "recommend",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">是</span>';
-            } else {
-                return '<span class="text-danger">否</span>';
-            }
-        }
-    }, {
-        "data" : null, //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var result = '';
-            //修改按钮
-            result += '<a href="'+myTable.editUrl+row.id+'.gsp" data-target="#commonWin" class="btn btn-primary btn-xs" data-toggle="modal"><i class="fa fa-edit"></i>&nbsp;回复</a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        //d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-        d.typeId = $('#typeId').val(); //模糊查询
-    };
+        };
+        tg_basePage(option);
+        
+        $("#typeId").change(function() {
+            $("#typeForm").submit();
+        });
+    })
 
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/ext/guestbook/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/ext/guestbook/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/ext/guestbook/delete_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
-    $("#typeId").change(function() {
-        myTable.refresh();
-    });
+    var deleteUrl = /*[[@{/admin/m/ext/guestbook/delete_{id}.htm}]]*/;
+    function deleted(id) {
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });
+    }
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
 </html>
