--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/tag/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/tag/edit.html
@@ -1,43 +1,63 @@
-<form th:action="@{/admin/m/base/tag/edit.gsp}" th:object="${result}" class="form-horizontal" id="editForm" role="form" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">修改TAG</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<input th:field="*{id}" type="text" hidden="true" /> 
-				<div class="form-group">
-					<label class="col-md-3 control-label">TAG名称<label class="text-danger">*</label>：</label>
-					<div class="col-md-7">
-						<input th:field="*{tagName}" placeholder="请输入TAG名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-内容管理-TAG管理|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+<!--/***** 当前页css  start *****/-->
+<!--/***** 当前页css  end *****/-->
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=tag)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/base/tag/list.gsp}">TAG管理</a><a><cite>修改</cite></a>
+					</span>
 				</div>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/base/tag/edit.gsp}" th:object="${result}" id="editForm" role="form" method="post" class="layui-form">
+					<input th:field="*{id}" type="text" hidden="true" />
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>TAG管理-修改</legend>
+					</fieldset>
+					<div class="layui-form-item">
+						<label class="layui-form-label">TAG名称<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" th:field="*{tagName}" lay-verify="tagName" placeholder="请输入TAG名称" autocomplete="off" class="layui-input">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+<!--/***** 当前页js start *****/-->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            tagName : {
-                required : true,
-                maxlength : 20
+    var form = layui.form();
+    var $ = layui.jquery;
+  //自定义验证规则
+    var rules = {
+            tagName : function(value) {
+            if (value.length < 1 || value.length > 20) {
+                return 'TAG名称在1~20个字符之间';
             }
-        }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'editForm', rules, messages);
-    });
+        },
+    };
+    form.verify(rules);
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
+</html>
