--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/tag/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/tag/list.html
@@ -4,121 +4,99 @@
 <title th:text="|#{customer.systemTitle}-图灵谷-内容管理-TAG管理|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
 <!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=content,current=tag)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=内容管理,current=TAG管理)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<form th:action="@{/admin/m/base/tag/list.gsp}" id="dataTableFilterForm" role="form" action="#" method="post">
-								<div class="col-md-8">
-									<a th:href="@{/admin/m/base/tag/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-								</div>
-								<div class="col-md-4">
-									<div class="input-group">
-										<input type="text" hidden="true" /> <input id="simpleQueryParam" type="text" placeholder="请输入关键字搜索" class=" form-control" /> <span class="input-group-btn">
-											<button onclick="myTable.filter()" type="button" class="btn btn-sm btn-primary">搜索</button>
-										</span>
-									</div>
-								</div>
-							</form>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th width="60">#</th>
-									<th>Tag名称</th>
-									<th>创建日期</th>
-									<th>文档数量</th>
-									<th width="120">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=tag)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/base/tag/list.gsp}">TAG管理</a><a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/base/tag/list.gsp}" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline">
+									<a th:href="@{/admin/m/base/tag/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe61f;</i> 新增</a>
+								</div>
+							</div>
+							<div class="layui-inline" style="float: right;">
+								<div class="layui-input-inline" style="width: 200px;">
+									<input type="text" name="type" value="2" hidden="hidden"> <input type="search" id="simpleQueryParam" name="simpleQueryParam" placeholder="关键字" autocomplete="off" class="layui-input">
+								</div>
+								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+									<i class="layui-icon">&#xe615;</i>
+								</button>
+							</div>
+						</blockquote>
+					</div>
+				</form>
+				<!--/***** 列表 *****/-->
+				<table class="layui-table" lay-even="" lay-skin="row">
+					<thead id="dataTable">
+						<tr>
+							<th style="width: 40px">#</th>
+							<th>Tag名称</th>
+							<th>创建日期</th>
+							<th>文档数量</th>
+							<th style="width: 140px">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${tagList.records == null or tagList.records.size() == 0}">
+							<td colspan="5" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,items:${tagList.records}">
+							<td th:text="${tagList.pageSize*(tagList.page-1)+items.index+1}" style="text-align: center;">序号</td>
+							<td th:text="${item.tagName}">Tag名称</td>
+							<td th:text="${item.createDataTime!=null?#dates.format(item.createDataTime,'yyyy-MM-dd HH:mm:ss'):''}">创建日期</td>
+							<td th:text="${item.refers}">文档数量</td>
+							<td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/base/tag/edit_{id}.gsp(id=${item.id})}"><i class="layui-icon">&#xe642;</i></a>
+								<button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+									<i class="layui-icon">&#xe640;</i>
+								</button></td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="pageDiv"></div>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/***** 当前页js end *****/-->
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* 模板引擎生成数据 */-->
 <script th:inline="javascript">
-/*<![CDATA[*/
-//表格
-var myTable;
-//表格列定义
-var columnDefs = [ {
-    //第一列，用来显示序号
-    "searchable" : false,
-    "orderable" : false,
-    "targets" : 0
-} ];
-var columns = [ {
-    //第一列，用来显示序号
-    "data" : null
-},{
-	"data" : "tagName"
-},{
-    "data" : "createDataTime"
-},{
-    "data" : "refers"
-},{
-    "data" : null, //最后一列，操作按钮
-    render : function(data, type, row, meta) {
-        var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-        var result = '';        
-        //修改按钮
-        result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-        //删除按钮
-        result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';    
-        return result;
-    } 
-} ];
-//ajax参数
-var ajaxDataParamFun = function(d) {
-    d.simpleQueryParam = $("#simpleQueryParam").val();
-};
-//表格setting
-var setting = {
-    listUrl : /*[[@{/admin/m/base/tag/list.gsp}]]*/'url',
-    editUrl : /*[[@{/admin/m/base/tag/edit_}]]*/'url',
-    deleteUrl : /*[[@{/admin/m/base/tag/delete_}]]*/'url',
-    columnDefs : columnDefs, //表格列定义
-    columns : columns, //表格列
-    dataTableDiv : 'dataTable', //表格
-    ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-    pageable : true, //是否分页
-    showIndexColumn : true, //是否显示第一列的索引列
-    enabledChange : true
-};
-//创建表格
-myTable = new TG_Tabel.createNew(setting);
-//加载完成后执行
-$(function() {
-    //表格初始化
-    myTable.init();
-});      
-/*]]>*/
+    /*<![CDATA[*/
+    var $ = layui.jquery;
+    var result = /*[[${tagList}]]*/;
+    $(function(){
+        $("#simpleQueryParam").val(GetQueryString("simpleQueryParam"));
+        var option = {
+            listUrl : /*[[@{/admin/m/base/tag/list.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+                simpleQueryParam
+            }
+        };
+        tg_basePage(option);
+    })
+
+    var deleteUrl = /*[[@{/admin/m/base/tag/delete_{id}.htm}]]*/;
+    function deleted(id) {
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });
+    }
+    /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
 </html>
