常规维护 不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
@@ -76,6 +76,12 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td>2017-**-**</td>
+								<td>V3.0</td>
+								<td>口香糖</td>
+								<td>UI换成layui，糖果还未成形，先嚼一嚼吧</td>
+							</tr>
+							<tr>
 								<td>2016-07-15</td>
 								<td>V2.1</td>
 								<td>橡皮糖</td>
