--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/footer_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/footer_admin.html
@@ -1,5 +1,5 @@
 <!--/*******底部版权信息等*******/-->
-<div class="layui-footer footer footer-demo">
+<div class="layui-footer footer-demo">
 	<div class="layui-main">
 		<p>
 			2016 &copy; <a href="http://www.turingoal.com">图灵谷（北京）科技有限公司</a>
