常规维护 暂时不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/index.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/index.html
@@ -9,22 +9,24 @@
 		<div th:replace="fragments/menu_admin::menu(parent=index,child=index)">菜单栏</div>
 		<!--/*******内容*******/-->
 		<div class="layui-body">
-			<table class="layui-table">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>参数名称</th>
-						<th>参数值</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="resultItem,itemStat : ${resultList}" class="gradeX">
-						<td th:text="${itemStat.index+1}">1</td>
-						<td th:text="${resultItem.name}">name</td>
-						<td th:text="${resultItem.value}">value</td>
-					</tr>
-				</tbody>
-			</table>
+			<div class="layui-main">
+				<table class="layui-table">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>参数名称</th>
+							<th>参数值</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="resultItem,itemStat : ${resultList}" class="gradeX">
+							<td th:text="${itemStat.index+1}">1</td>
+							<td th:text="${resultItem.name}">name</td>
+							<td th:text="${resultItem.value}">value</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
